tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-18/test000011.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c
Line: 20
Stack: 
	#0 00000055 in remove_from_list (head=25686112, node=25686688) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:20
	#1 00000087 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list1.c:38
Info: 
	address: (Add w64 8
         (ReadLSB w64 0 U0:[(Add w32 7
                                     N0:(Extract w32 0 (Add w64 18446744073683907136
                                                                (ReadLSB w64 8 U1:[(Add w32 7
                                                                                            N1:(Extract w32 0 (Add w64 18446744073683864936
                                                                                                                       (ReadLSB w64 16 a1))))=(Read w8 15 a1),
                                                                                   (Add w32 6 N1)=(Read w8 14 a1),
                                                                                   (Add w32 5 N1)=(Read w8 13 a1),
                                                                                   (Add w32 4 N1)=(Read w8 12 a1),
                                                                                   (Add w32 3 N1)=(Read w8 11 a1),
                                                                                   (Add w32 2 N1)=(Read w8 10 a1),
                                                                                   (Add w32 1 N1)=(Read w8 9 a1),
                                                                                   N1=(Read w8 8 a1)] @ a1))))=(Read w8 23 U1),
                            (Add w32 6 N0)=(Read w8 22 U1),
                            (Add w32 5 N0)=(Read w8 21 U1),
                            (Add w32 4 N0)=(Read w8 20 U1),
                            (Add w32 3 N0)=(Read w8 19 U1),
                            (Add w32 2 N0)=(Read w8 18 U1),
                            (Add w32 1 N0)=(Read w8 17 U1),
                            N0=(Read w8 16 U1)] @ const_arr7))
	example: 25644488
	range: [25644488, 25644488]
	next: object at 25644496 of size 8
		MO26[8] allocated at remove_from_list():  %node_addr = alloca %struct.Node_t*, align 8
	prev: object at 25605984 of size 3
		MO7[3] allocated at global:.str
